workspace-sf/force-app/main/default/objects/CanalCampanha__c/CanalCampanha__c.object-meta.xml
<CustomObject>
    <description>Objeto de relacionamento entre a campanha de incentivo e o canal</description>
    <label>Canal da campanha</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Número</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canais da campanha</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>