workspace-sf/force-app/main/default/objects/CanalCampanha__c/fields/CampanhaIncentivo__c.field-meta.xml
<CustomField>
    <fullName>CampanhaIncentivo__c</fullName>
    <label>Campanha de incentivo</label>
    <referenceTo>CampanhaIncentivo__c</referenceTo>
    <relationshipLabel>Canais da campanha</relationshipLabel>
    <relationshipName>CanaisCampanha</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>