workspace-sf/force-app/main/default/objects/CanalCampanha__c/fields/CanalDistribuicao__c.field-meta.xml
<CustomField>
    <fullName>CanalDistribuicao__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Canal de distribuição</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>CanalDistribuicao__c.Status__c</field>
            <operation>equals</operation>
            <value>Ativo</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>CanalDistribuicao__c</referenceTo>
    <relationshipLabel>Canais da campanha</relationshipLabel>
    <relationshipName>CanaisCampanha</relationshipName>
    <type>Lookup</type>
</CustomField>