workspace-sf/force-app/main/default/objects/CanalCampanha__c/fields/Meio__c.field-meta.xml
<CustomField>
    <fullName>Meio__c</fullName>
    <label>Meio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meio 1</fullName>
            </value>
            <value>
                <fullName>Meio 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>