workspace-sf/force-app/main/default/objects/CanalCampanha__c/fields/Papel__c.field-meta.xml
<CustomField>
    <fullName>Papel__c</fullName>
    <label>Papel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cliente</fullName>
            </value>
            <value>
                <fullName>Corretor</fullName>
            </value>
            <value>
                <fullName>Varejo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>