workspace-sf/force-app/main/default/objects/CanalCampanha__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto comercial</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Somente produto comercial.</errorMessage>
        <filterItems>
            <field>Product2.RecordType.Name</field>
            <operation>equals</operation>
            <value>Produto comercial</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Canais da campanha</relationshipLabel>
    <relationshipName>CanaisCampanha</relationshipName>
    <type>Lookup</type>
</CustomField>