workspace-sf/force-app/main/default/objects/CanalCampanha__c/validationRules/ValidacaoPapeis.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidacaoPapeis</fullName>
    <active>true</active>
    <description>Valida os papéis existentes em Campanha de incentivo e Canal de distribuição</description>
    <errorConditionFormula>OR(
	AND(ISPICKVAL(Papel__c, &apos;Cliente&apos;), NOT(INCLUDES(CanalDistribuicao__r.Papeis__c, &apos;Cliente&apos;))),
	AND(ISPICKVAL(Papel__c, &apos;Corretor&apos;), NOT(INCLUDES(CanalDistribuicao__r.Papeis__c, &apos;Corretor&apos;))),
	AND(ISPICKVAL(Papel__c, &apos;Varejo&apos;), NOT(INCLUDES(CanalDistribuicao__r.Papeis__c, &apos;Varejo&apos;)))
)</errorConditionFormula>
    <errorMessage>Os papéis existentes no Canal de distribuição escolhido, não são compatíveis com o papel da Campanha de incentivo.</errorMessage>
</ValidationRule>